test/should_fail/retype_001.grg
actions retype_001 using attrib_model_001;

rule r {
	pattern {
		a:NINT;
		b:NINT;
		a -e:Edge-> b;
	}
	replace {
		c: NFLOAT<a>;
		a -e-> c;
		
	}
}

